added maven export options to read me file